<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.pack.pack</groupId>
	<artifactId>com.pack.pack</artifactId>
	<version>1.0-DEV</version>
	<name>PackPack</name>
	<description>PackPack</description>
	<packaging>pom</packaging>
	<scm>
		<connection>https://github.com/saurav-sen/packpack.git</connection>
		<developerConnection>https://github.com/saurav-sen/packpack.git</developerConnection>
	</scm>

	<properties>		
		<java_home>${JAVA_HOME}</java_home>
		<maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
		<javaVersion>1.8</javaVersion>
		<java.version>1.8</java.version>
		<spring.version>4.1.6.RELEASE</spring.version>
		<encoding>UTF-8</encoding>
		<ektorp.version>1.4.2</ektorp.version>
		<packpack.release>1.0-DEV</packpack.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<artifacts.directory>${project.build.directory}/artifacts</artifacts.directory>
		<finalName>${project.artifactId}-${project.version}</finalName>
		<parent.basedir>${project.basedir}</parent.basedir>
		<!--jersey.version>2.15</jersey.version-->	
		<jersey.version>1.12</jersey.version>
		<jersey2.version>2.19</jersey2.version>
		<jaxrs.version>2.0.1</jaxrs.version>
		<com.ibm.icu>4.4.2.v20110208</com.ibm.icu>
		<com.ibm.icu.base>4.2.1.v20100412</com.ibm.icu.base>
		<com.lowagie.text>2.1.7.v201004222200</com.lowagie.text>
		<javax.servlet>2.5.0.v201103041518</javax.servlet>
		<javax.servlet.jsp>2.0.0.201109261834</javax.servlet.jsp>		
		<servlet-api>2.5</servlet-api>
		<org.apache.commons.codec>1.3.0.v201101211617</org.apache.commons.codec>
		<org.apache.tomcat>7.0.21</org.apache.tomcat>
		<org.apache.commons.logging>1.1.1.v201101211721</org.apache.commons.logging>
		<org.apache.commons.cli>1.2.0.v201105210650</org.apache.commons.cli>
		<org.apache.commons.collections>3.2.0.v201005080500</org.apache.commons.collections>
		<org.apache.commons.fileupload>1.2.0.v20080604-1500</org.apache.commons.fileupload>
		<commons-fileupload>1.2.2</commons-fileupload>
		<jaxb-impl.version>2.2.7</jaxb-impl.version>
		<org.apache.commons.io>1.4.0.v20081110-1000</org.apache.commons.io>
		<org.apache.commons.lang>2.4.0.v201005080502</org.apache.commons.lang>
		<org.apache.commons.el>1.0.0.201109261834</org.apache.commons.el>		
		<org.apache.jasper>5.5.17.201109261835</org.apache.jasper>		
		<javax.activation>1.1.1</javax.activation>
		<mockito-all.version>1.9.0</mockito-all.version>
		<tomcat.servlet.version>7.0.30</tomcat.servlet.version>
		<com.google.guava>18.0</com.google.guava>
		<org.apache.log4j>1.2.15.v201012070815</org.apache.log4j>			
		<junit.version>4.10</junit.version>		
		<!--slf4j.version>1.5.10</slf4j.version-->	
		<slf4j.version>1.6.4</slf4j.version>				
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>		
		<joda-time.version>1.6.2</joda-time.version>
		<im4java.version>1.4.0</im4java.version>
		<imgscalr-lib.version>4.2</imgscalr-lib.version>
		<rabbitmq.version>3.5.6</rabbitmq.version>
		<imgscalr.version>4.2</imgscalr.version>
		<jcodec-javase.version>0.1.9</jcodec-javase.version>
		<hazelcast.version>3.2</hazelcast.version>
		<apache.httpclient>4.5.2</apache.httpclient>
	</properties>

	<modules>
		<module>model</module>
		<module>common</module>
		<module>elastic-search</module>
		<module>services</module>
		<module>oauth</module>
		<module>api</module>
		<module>api-client-java</module>
		<module>load-master</module>
		<module>ogcrawler</module>
	</modules>
	<profiles>
		<!--profile>
			<id>jdk1.7+</id>
			<activation>
				<jdk>[1.7,</jdk>
			</activation>
		</profile-->
	</profiles>

	<repositories>
		<repository>
		  <id>nexus</id>
		  <url>https://code.lds.org/nexus/content/groups/main-repo</url>
		</repository>
		<repository>
		  <id>repo1</id>
		  <url>http://repo1.maven.org/maven2</url>
		</repository>
	</repositories>

 	<reporting>
            <plugins>                 
                 <plugin>
                       <groupId>org.apache.maven.plugins</groupId>
                       <artifactId>maven-pmd-plugin</artifactId>
                       <version>2.3</version>
                       <configuration>
                            <targetJdk>${javaVersion}</targetJdk>
                       </configuration>
                 </plugin>       
           </plugins>
      </reporting>
</project>
